--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,28 @@ uuid = "b453e4c4-4bcd-41c2-b157-cea5ea685e94"
 authors = ["ptiede <ptiede91@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
+NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+ROSE = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+Soss = "8ce77f84-9b61-11e8-39ff-d17a774bf41c"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+
 [compat]
+BlackBoxOptim = "0.5"
+MCMCChains = "4"
+NestedSamplers = "0.6"
+PyCall = "1"
+Requires = "1"
+Soss = "0.18"
+StatsBase = "0.33"
+StructArrays = "0.5"
 julia = "1.6"
 
 [extras]
