updated to Soss 0.18 and added complex vis

--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,8 @@ MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
 NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 ROSE = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Soss = "8ce77f84-9b61-11e8-39ff-d17a774bf41c"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
