--- a/Project.toml
+++ b/Project.toml
@@ -20,11 +20,14 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 
 [compat]
 BlackBoxOptim = "0.5"
+Distributions = "0.22,0.23,0.24"
+MeasureTheory = "0.6"
 MCMCChains = "4"
 NestedSamplers = "0.6"
 PyCall = "1"
 Requires = "1"
-Soss = "0.18"
+Reexport = "1"
+Soss = "0.18,0.19"
 StatsBase = "0.33"
 StructArrays = "0.5"
 julia = "1.6"
