--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,6 @@ authors = ["ptiede <ptiede91@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
-BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
@@ -19,14 +18,13 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 
 [compat]
-BlackBoxOptim = "0.5"
-Distributions = "0.22,0.23,0.24"
-MeasureTheory = "0.6"
+Distributions = "0.22 - 0.25"
 MCMCChains = "4"
+MeasureTheory = "0.6"
 NestedSamplers = "0.6"
 PyCall = "1"
-Requires = "1"
 Reexport = "1"
+Requires = "1"
 Soss = "0.18,0.19"
 StatsBase = "0.33"
 StructArrays = "0.5"
