--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ Reexport = "1"
 Requires = "0.5 - 1"
 Soss = "0.18,0.19"
 StatsBase = "0.33,0.34,0.35"
-StructArrays = "0.3,0.4,0.5"
+StructArrays = "0.3,0.4,0.5, 0.6"
 julia = "1.5,1.6"
 
 [extras]
