--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.1"
 [deps]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
 NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
@@ -16,19 +17,20 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Soss = "8ce77f84-9b61-11e8-39ff-d17a774bf41c"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
 TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 
 [compat]
-Distributions = "0.22 - 0.25"
-MeasureTheory = "0.6,0.7,0.8"
+Distributions = "0.22 - 0.26"
+MeasureTheory = "0.6,0.7,0.8,0.9,0.10"
 NestedSamplers = "0.6"
 PyCall = "1"
 Reexport = "1"
 Requires = "0.5 - 1"
-Soss = "0.18,0.19"
+Soss = "0.18,0.19,0.20"
 StatsBase = "0.33,0.34,0.35"
 StructArrays = "0.3,0.4,0.5"
-julia = "1.5,1.6"
+julia = "1.5,1.6,1.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
