--- a/Project.toml
+++ b/Project.toml
@@ -7,8 +7,11 @@ version = "0.1.1"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
+NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
+NestedTuples = "a734d2a7-8d68-409b-9419-626914d4061d"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 ROSE = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
