--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ Requires = "0.5 - 1"
 Soss = "0.18,0.19,0.20"
 StatsBase = "0.33,0.34,0.35"
 StructArrays = "0.3,0.4,0.5"
+TransformVariables = "0.4"
 julia = "1.5,1.6,1.7"
 
 [extras]
