--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 
 [compat]
 Distributions = "0.22 - 0.26"
+ForwardDiff = "0.10"
 MeasureTheory = "0.6,0.7,0.8,0.9,0.10"
 PyCall = "1"
 Reexport = "1"
