--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 
 [compat]
 Distributions = "0.22 - 0.26"
+LoopVectorization = "0.12"
 MeasureTheory = "0.10,0.11,0.12,0.13"
 PyCall = "1"
 Reexport = "1"
