--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 Distributions = "0.22 - 0.26"
 MeasureTheory = "0.10,0.11,0.12,0.13"
 PyCall = "1"
+ROSE = "0.1"
 Reexport = "1"
 Requires = "0.5 - 1"
 Soss = "0.18,0.19,0.20"
