--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "ROSESoss"
+name = "ComradeSoss"
 uuid = "b453e4c4-4bcd-41c2-b157-cea5ea685e94"
 authors = ["ptiede <ptiede91@gmail.com> and contributors"]
 version = "0.1.1"
@@ -14,7 +14,7 @@ NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 NestedTuples = "a734d2a7-8d68-409b-9419-626914d4061d"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
-ROSE = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
+Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
