--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
 TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 
 [compat]
-Comrade = "0.2"
+Comrade = "0.2, 0.3"
 Distributions = "0.22 - 0.26"
 MeasureTheory = "0.10,0.11,0.12,0.13"
 PyCall = "1"
