--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ Comrade = "0.2, 0.3"
 Distributions = "0.22 - 0.26"
 LoopVectorization = "0.12"
 MeasureTheory = "0.10,0.11,0.12,0.13"
-NamedTupleTools = "0.10-0.14"
+NamedTupleTools = "0.10 - 0.14"
 PyCall = "1"
 Reexport = "1"
 Requires = "0.5 - 1"
