--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ NamedTupleTools = "0.10 - 0.14"
 PyCall = "1"
 Reexport = "1"
 Requires = "0.5 - 1"
-Soss = "0.18,0.19,0.20"
+Soss = "0.18,0.19,0.20, 0.21"
 StatsBase = "0.33,0.34,0.35"
 StructArrays = "0.3,0.4,0.5,0.6"
 TransformVariables = "0.4,0.5,0.6"
