--- a/Project.toml
+++ b/Project.toml
@@ -37,6 +37,7 @@ Soss = "0.18,0.19,0.20"
 StatsBase = "0.33,0.34,0.35"
 StructArrays = "0.3,0.4,0.5,0.6"
 TransformVariables = "0.4,0.5,0.6"
+TupleVectors = "0.2"
 julia = "^1.5"
 
 [extras]
